update msc amount

--- a/app/views/items/destroy.turbo_stream.erb
+++ b/app/views/items/destroy.turbo_stream.erb
@@ -8,4 +8,8 @@
   <% end %>
 <% end %>
 
+<%= turbo_stream.update "msc" do %>
+  <%= render partial: 'items/monthly_saving_capaticy', locals: { item: Item }%>
+<% end %>
+
 <%= turbo_stream.remove dom_id(@item) %>
