--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,6 +26,6 @@
   </div>
 </div>
 
-<div class="row">
-  <h3>Monthly Savings Capacity: <%= Item.msc %></h3>
+<div class="row" id="msc">
+  <%= render "items/monthly_saving_capaticy", item: Item %>
 </div>
