implement sum by month

--- a/app/views/items/create.turbo_stream.erb
+++ b/app/views/items/create.turbo_stream.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= turbo_stream.update "msc" do %>
-  <%= render partial: 'items/monthly_saving_capaticy', locals: { item: Item }%>
+  <%= render partial: 'items/monthly_saving_capaticy', locals: { item: Item.msc_by_month(@item.monthly_item) }%>
 <% end %>
 
 <%= turbo_stream.update Item.new, "" %>
