--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,5 @@
 <%= turbo_frame_tag dom_id(Item.new) do %>
   <div class="h3">Create Item</div>
-  <%= render "form", item: @item %>
+
+  <%= render "form", monthly_item: @monthly_item, item: @item %>
 <% end %>
