--- a/app/views/monthly_items/index.html.erb
+++ b/app/views/monthly_items/index.html.erb
@@ -10,11 +10,6 @@
 <% end %>
 
 
-<div class="row">
-  <div class="col">
-    <span class="float-end badge bg-success fs-6">
-      <%= MonthlyItem.accumulated %>
-    </span>
-    <span class="float-end fw-bold mt-1">Accumulated: &MediumSpace;</span>
-  </div>
+<div class="row" id="accumulated">
+  <%= render 'monthly_items/accumulated', accumulated: MonthlyItem.accumulated %>
 </div>
