--- a/app/views/monthly_items/show.html.erb
+++ b/app/views/monthly_items/show.html.erb
@@ -16,7 +16,7 @@
 
 <%= pie_chart @monthly_item.chart_by_month, donut: true  %>
 
-<div class="row mt-4">
+<div class="row mt-4" data-controller="items">
   <div class="col" style="border-right: 1px solid #333;">
     <h4 class="mb-5 text-center">Incomes</h4>
     <%= turbo_frame_tag "incomes" do %>
