updating by checkbox the monthly savings capacity

--- a/app/views/items/_monthly_saving_capaticy.html.erb
+++ b/app/views/items/_monthly_saving_capaticy.html.erb
@@ -1,1 +1,3 @@
-<h3>Monthly Savings Capacity: <%= item %></h3>
+<%= turbo_frame_tag "msc" do %>
+  <h3>Monthly Savings Capacity: <%= item %></h3>
+<% end %>
