--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,17 +1,28 @@
 <%= turbo_frame_tag item do %>
-  <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between align-items-center bg-light m-2">
-      <span class="fw-bold p-2 text-capitalize"><%= item.name %></span>
-      <span><%= item.amount %></span>
-      <span><%= item.applied %></span>
-      <span>
-        <%= form_with model: [item.monthly_item, item] do |form| %>
-          <%= form.check_box :applied, data: { item_id: item.id, monthly_item_id: item.monthly_item.id, action: "items#submit_charge" } %>
-        <% end %>
-      </span>
-      <span><%= link_to "Remove", monthly_item_item_path(item.monthly_item, item),
+  <div class="mt-3">
+    <div class="list list-inline mb-2">
+      <div class="row border-bottom pb-2">
+        <div class="col-5">
+          <span class="fw-bold p-2 text-capitalize"><%= item.name %></span>
+        </div>
+        <div class="col">
+          <span><%= item.amount %></span>
+        </div>
+        <div class="col">
+          <span>
+            <%= form_with model: [item.monthly_item, item] do |form| %>
+              <%= form.check_box :applied, data: { item_id: item.id, monthly_item_id: item.monthly_item.id, action: "items#submit_charge" }, class: 'form-check-input' %>
+            <% end %>
+          </span>
+        </div>
+        <div class="col">
+          <span>
+            <%= link_to "", monthly_item_item_path(item.monthly_item, item),
                                   data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' },
-                                  class: "btn btn-danger" %></span>
-    </li>
-  </ul>
+                                  class: "btn btn-danger bi bi-trash3" %>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
