update views on monthly show view

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [monthly_item, item], class: 'row g-3' do |form| %>
+<%= form_with model: [monthly_item, Item], class: 'row g-3 mt-2' do |form| %>
   <div class="col-auto">
     <%= form.label :name, class: "visually-hidden" %>
     <%= form.text_field :name, class: "form-control", placeholder: "Item Name" %>
@@ -13,6 +13,6 @@
   </div>
 
   <div class="col-auto">
-    <%= form.submit "Create", class: "btn btn-primary" %>
+    <%= form.submit "Create", class: "btn btn-outline-primary btn-sm float-end fw-light mt-4" %>
   </div>
 <% end %>
