--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag item do %>
-  <div class="mt-3">
+  <div class="mt-3 fw-lighter fs-5">
     <div class="list list-inline mb-2">
       <div class="row border-bottom pb-2">
         <div class="col-5">
@@ -18,8 +18,10 @@
         <div class="col">
           <span>
             <%= link_to "", monthly_item_item_path(item.monthly_item, item),
+                            class: "bi bi-pen-fill text-danger" %>
+            <%= link_to "", monthly_item_item_path(item.monthly_item, item),
                                   data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' },
-                                  class: "btn btn-danger bi bi-trash3" %>
+                                  class: "bi bi-eraser-fill text-danger" %>
           </span>
         </div>
       </div>
