--- a/app/views/items/_header.html.erb
+++ b/app/views/items/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 fw-lighter fs-5">
   <div class="row">
     <div class="col-5 p-0">
       <span>Item</span>
