--- a/app/views/items/_monthly_saving_capaticy.html.erb
+++ b/app/views/items/_monthly_saving_capaticy.html.erb
@@ -1,3 +1,3 @@
 <%= turbo_frame_tag "msc" do %>
-  <h3>Monthly Savings Capacity: <%= item %></h3>
+  <span class="display-3"><%= number_to_currency(item) %></span>
 <% end %>
