--- a/app/views/monthly_items/show.html.erb
+++ b/app/views/monthly_items/show.html.erb
@@ -2,48 +2,56 @@
 
 <div class="row">
   <div class="col">
-    <h3><%= @monthly_item.month.capitalize %> Budget</h3>
+    <h3 class="display-3 fw-lighter"><%= @monthly_item.month.capitalize %> Budget</h3>
   </div>
 
   <div class="col">
-    <%= link_to "Create a new item",
-                new_monthly_item_item_path(@monthly_item, Item.new),
-                class: 'btn btn-primary float-end',
-                data: { "turbo-frame": dom_id(Item.new) }
-    %>
-
-    <%= turbo_frame_tag Item.new %>
+    <%= link_to new_monthly_item_item_path(@monthly_item, Item.new), data: { "turbo-frame": dom_id(Item.new) } do %>
+      <i class="bi bi-plus-circle-fill display-6 float-end" data-toggle="tooltip" data-placement="top" title="Tooltip on top"></i>
+    <% end %>
   </div>
 </div>
 
 <div class="row">
-  <div class="col">
-    <%= pie_chart @monthly_item.chart_by_month, donut: true  %>
+  <div class="col-6">
+    <div class="alert alert-success pt-4 pb-4" role="alert">
+      <div>
+        <span class="display-6 alert-heading fw-lighter">Current Balance</span>
+      </div>
+      <%= turbo_frame_tag "msc" do %>
+        <%= render 'items/monthly_saving_capaticy', item: @monthly_item.msc_by_month.to_f %>
+      <% end %>
+    </div>
   </div>
+  <div class="col-6">
+    <%= turbo_frame_tag Item.new %>
+    <%#= pie_chart @monthly_item.chart_by_month, donut: true , library: { backgroundColor: "#f5f5f5" } %>
+  </div>
+</div>
 
-  <div class="col position-sticky">
-    <%= turbo_frame_tag "msc" do %>
-      <%= render 'items/monthly_saving_capaticy', item: @monthly_item.msc_by_month.to_f %>
-    <% end %>
+
+<div class="row mt-2" data-controller="items">
+  <div class="col" style="height:400px;overflow-y:scroll;">
+    <div class="alert alert-info pt-4 pb-4" role="alert">
+      <div>
+        <span class="display-6 alert-heading fw-lighter">Incomes</span>
+      </div>
+      <%= render "items/header" %>
+      <%= turbo_frame_tag "incomes" do %>
+        <%= render @monthly_item.items.income.desc_order %>
+      <% end %>
+    </div>
+  </div>
+  <div class="col" style="height:400px;overflow-y:scroll;">
+    <div class="alert alert-danger pt-4 pb-4" role="alert">
+      <div>
+        <span class="display-6 alert-heading fw-lighter">Outcomes</span>
+      </div>
+      <%= render "items/header" %>
+      <%= turbo_frame_tag "outcomes" do %>
+        <%= render @monthly_item.items.outcome.desc_order %>
+      <% end %>
+    </div>
   </div>
 </div>
 
-
-<!--TODO: REFACTOR -->
-<div class="row mt-4" data-controller="items" style="height:400px;overflow-y:scroll;">
-  <div class="col" style="border-right: 1px solid #333;">
-    <h4 class="mb-5 text-center">Incomes</h4>
-    <%= render "items/header" %>
-    <%= turbo_frame_tag "incomes" do %>
-      <%= render @monthly_item.items.income.desc_order %>
-    <% end %>
-  </div>
-  <div class="col">
-    <h4 class="mb-5 text-center">Outcomes</h4>
-    <%= render "items/header" %>
-    <%= turbo_frame_tag "outcomes" do %>
-      <%= render @monthly_item.items.outcome.desc_order %>
-    <% end %>
-  </div>
-</div>
-<!--TODO: REFACTOR -->
