implement charts on index view

--- a/app/views/monthly_items/_accumulated.html.erb
+++ b/app/views/monthly_items/_accumulated.html.erb
@@ -1,6 +1,1 @@
-<div class="col">
-  <span class="float-end badge bg-success fs-6">
-    <%= accumulated %>
-  </span>
-  <span class="float-end fw-bold mt-1">Accumulated: &MediumSpace;</span>
-</div>
+<span style="display: block;" class="fs-4"><%= number_to_currency(accumulated) %></span>
