--- a/app/views/monthly_items/_monthly_item.html.erb
+++ b/app/views/monthly_items/_monthly_item.html.erb
@@ -1,13 +1,17 @@
+
 <%= turbo_frame_tag monthly_item do %>
-<div class="monthly_items_list">
-  <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between align-items-center bg-white m-2">
-      <%= link_to monthly_item.month, monthly_item_path(monthly_item), class: "text-decoration-none fw-bold p-2 text-capitalize", data: { "turbo_frame": "_top" } %>
-      <span><%= monthly_item.month_incomes %></span>
-      <span><%= monthly_item.month_outcomes %></span>
-      <span><%= monthly_item.msc_by_month %></span>
-      <%= button_to "Delete", monthly_item_path(monthly_item), method: :delete, class: "btn btn-danger btn-sm" %>
-    </li>
-  </ul>
-</div>
+    <div class="row">
+      <span>
+        <h3 class="fw-lighter text-success">
+          <%= link_to monthly_item_path(monthly_item), data: { "turbo_frame": "_top" }, class: "text-decoration-none" do %>
+            <span> <%= monthly_item.month.capitalize %></span>
+          <% end %>
+        </h3>
+      </span>
+    </div>
+
+    <div class="row mt-4">
+      <span class="fw-lighter text-primary">Incomes: <%= monthly_item.month_incomes %></span>
+      <span class="fw-lighter text-danger">Outcomes: <%= monthly_item.month_outcomes %></span>
+    </div>
 <% end %>
