--- a/app/views/monthly_items/show.html.erb
+++ b/app/views/monthly_items/show.html.erb
@@ -5,6 +5,12 @@
 
 <div class="row">
   <div class="col">
+    <%= link_to "Back", monthly_items_path, class: "btn btn-sm btn-primary" %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
     <h3 class="display-3 fw-lighter"><%= @monthly_item.month.capitalize %> Budget</h3>
   </div>
 
